# Best_QR_code_generator

./: README.md  pyproject.toml
src/best_qr_code_generator/: __main__.py
src/best_qr_code_generator/controllers/: Controller.py
src/best_qr_code_generator/models/: qr_generator.py
src/best_qr_code_generator/views/: HomeView.py
src/best_qr_code_generator/views/components/: Button.py  InputField.py  RoundedRect.py  Title.py
